--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "luxon": "^3.4.4",
     "morgan": "^1.10.0",
     "passport": "^0.7.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.12.0"
   },
   "devDependencies": {
